packages/preview/miage-rapide-tp/0.1.0/README.md
# miage-rapide-tp

Typst template to generate a practical work report for students of the MIAGE (Méthodes Informatiques Appliquées à la Gestion des Entreprises).

# 🧑‍💻 Usage

- Directly from [Typst web app](https://typst.app/) by clicking "Start from template" on the dashboard and searching for `miage-rapide-tp`.

- With CLI:

```
typst init @preview/miage-rapide-tp
```

# 🚀 Features

- Cover page
- Table of contents (optionnal)
- `question` = automatically generates a question number (optionnal) with the content of the question
- `code_block` = code block with syntax highlighting
- `remarque` = a remark block with content and color

# 📝 License

This is MIT licensed.

> Rapide means fast in French. tp is the abbreviation of "travaux pratiques" which means practical work. MIAGE is a French degree in computer science applied to management.

```

```
